tests/NormalTests/paczka1/small_fuzzy/34599546.err
Error in line 3: NMtoiGmsEHz A14 91,0
Error in line 7: NMtoiGmsEHz A204 29,9
